Sat Dec 25 14:27:09 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_extract_encoding_option): accept Encoding object as
	  encoding: optional argument.  [ruby-dev:42884]

Sat Dec 25 15:08:08 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ext/pty/pty.c (chfunc): Added rb_thread_atfork_before_exec().
	  We must reinitialize GVL at new process creation. Otherwise
	  we may meet an insane deadlock. [Bug#4121][ruby-dev:42686]

Wed Sep  8 22:46:31 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* ext/openssl/ossl_ssl.c (ssl_get_error): Thread context switch was
	  blocked on Windows while blocking call for SSLSocket.  Need to
	  convert errno for letting rb_io_wait_readable detect EWOULDBLOCK.
	  Patch by arton. ref #3794.

Thu Dec 23 23:29:04 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* common.mk, win32/Makefile.sub: fixes dependencies.
	  patch by nobu.

Thu Dec 23 22:29:08 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* io.c (io_fillbuf): fixes a mistake on merging r30280, at r30321.

Thu Dec 23 06:35:41 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* lib/net/smtp.rb: Net::SMTP should close the SSL connection if the
	  connection verification fails.

Tue Dec 21 06:25:43 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/rexml/test_contrib.rb (ContribTester#test_pos): should not
	  use fixed path name for tests.  [ruby-dev:42827]

	* test/rexml/test_sax.rb (SAX2Tester#test_socket): should not use
	  fixed port for tests.  [ruby-dev:42828]

Tue Dec 21 01:41:42 2010  Masaya Tarui  <tarui@ruby-lnag.org>

	* io.c : add an extra byte to buffer for the specification of read
	  in Windows. see [ruby-core:33460] and r29980. and, we have to
	  discuss how to do this one byte.

Wed Dec 15 04:02:00 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ext/openssl/ossl_x509ext.c (ossl_x509extfactory_set_config):
	  fix compile error when !HAVE_X509V3_SET_NCONF. Thanks
	  Chikanaga-san. [ruby-dev:42761] [Ruby 1.9-Bug#4158]
